# SubleaseMatcher

sublease-matcher-backend-api-main/: .env.example  .gitignore  AGENTS.md  DATABASE_UPDATE.md  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
sublease-matcher-backend-api-main/alembic/: env.py
sublease-matcher-backend-api-main/alembic/versions/: 0dc13fe0e2cc_.py  3ac41e715056_.py  5eb0e850bbf2_create_initial_schema.py  a3ba006a60a3_add_password_hash_and_sessions_table.py
sublease-matcher-backend-api-main/docs/db/: README.md  migrations.md  schema.md
sublease-matcher-backend-api-main/scripts/: dev_check.py  smoke.py  smoke_sql.py
sublease-matcher-backend-api-main/scripts/db/: create_db_from_models.py  reset_and_seed_dev.py  seed_sql.py  smoke_sql.py  smoke_sql_w.py
sublease-matcher-backend-api-main/src/sublease_matcher/: __init__.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/: __init__.py  config.py  errors.py  logging_config.py  main.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/adapters/: __init__.py  match_engine_simple.py  memory_repos.py  memory_uow.py  seed_data.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/adapters/sqlalchemy/: db.py  models.py  repos.py  uow.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/dependencies/: __init__.py  auth.py  settings.py  uow.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/interfaces/: __init__.py  engine.py  errors.py  repos.py  types.py  uow.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/routers/: __init__.py  auth.py  dto.py  listings.py  matches.py  seekers.py  swipes.py  users.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/services/: __init__.py
sublease-matcher-backend-api-main/src/sublease_matcher/api/tests/: seeker_test.py
sublease-matcher-backend-core-main/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
sublease-matcher-backend-core-main/src/sublease_matcher/core/: __init__.py  errors.py  factories.py  mappers.py
sublease-matcher-backend-core-main/src/sublease_matcher/core/domain/: __init__.py  enums.py  ids.py  listing.py  match.py  roommate.py  sample_entity.py  seeker.py  swipe.py  user.py  value_objects.py
sublease-matcher-backend-core-main/src/sublease_matcher/core/ports/: __init__.py  repos.py  uow.py
sublease-matcher-backend-core-main/src/sublease_matcher/core/services/: __init__.py  listings.py  matches.py  models.py  ports.py  seekers.py  swipes.py
sublease-matcher-backend-core-main/src/sublease_matcher/core/tests/: seeker_services_tests.py  seeker_tests.py  test_swipes.py
sublease-matcher-frontend-core-main/: .gitignore  AGENTS.md  README.md  components.json  next.config.ts  package.json  tailwind.config.js  tsconfig.json
sublease-matcher-frontend-core-main/src/: auth.config.ts
sublease-matcher-frontend-core-main/src/app/: layout.tsx  page.tsx
sublease-matcher-frontend-core-main/src/hooks/: useSwipeDeck.ts
sublease-matcher-frontend-core-main/src/lib/: api-client.ts  utils.ts  zod.ts
sublease-matcher-frontend-core-main/src/styles/: globals.css  shadcn.css  theme_uwec.css
(+101 files in other folders)
