[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sublease-matcher-api"
version = "0.1.0"
description = "FastAPI adapters and HTTP layer for Sublease Matcher"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.120",
  "uvicorn[standard]>=0.38",
  "pydantic>=2.12",
  "pydantic-settings>=2.11",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "bcrypt>=4.0.0",
  "email-validator>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sublease_matcher*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src"]
