[metadata]
name = sublease-matcher-api
version = 0.1.0
description = FastAPI adapters and HTTP layer for Sublease Matcher

[options]
python_requires = >=3.12
package_dir =
    = src
packages = find:
install_requires =
    fastapi>=0.120
    uvicorn[standard]>=0.38
    pydantic>=2.12
    pydantic-settings>=2.11

[options.packages.find]
where = src
include =
    sublease_matcher*
